tests/circuits/invalids/unknown_name.nts
.chipsets:
input   a
input   b
4071    or
output  s
.links:
a:1     or:1
azerty:1     or:2
or:3    s:1